# actual-fantasy-baseball

./: .gitignore  Cargo.toml  NOTES.md  README.md  docker-compose.yml  generators.yml  run.sh  schema.graphql  storage.yml
_rust_frontends/frontend_dioxus/: Trunk.toml  fonts.css  index.html  tailwind.config.js
_rust_frontends/frontend_dioxus/src/: main.rs  post.rs
_rust_frontends/frontend_yew/: Cargo.toml  index.html  package.json
_rust_frontends/frontend_yew/graphql/leagues/: get_league.graphql  my_leagues.graphql
_rust_frontends/frontend_yew/src/: state.rs
_rust_frontends/frontend_yew/src/api/: mod.rs
_rust_frontends/frontend_yew/src/components/base/: button.rs  dropdown.rs  mod.rs
_rust_frontends/frontend_yew/src/components/form/: mod.rs
_rust_frontends/frontend_yew/src/routes/: create_league.rs  join_league.rs
common/: Cargo.toml
common/src/: enums.rs  filter.rs  lib.rs  meta.rs  structs.rs
frontend/: Cargo.toml  cfg.toml  extra.css  fonts.css  index.html  main.css  package.json  tailwind.config.js  tailwind.css
frontend/graphql/: schema.graphql
frontend/graphql/auth/: login.graphql  logout.graphql  me.graphql  signup.graphql
frontend/graphql/leagues/: my_leagues.graphql  public_leagues.graphql  select_league.graphql
frontend/graphql/teams/: create_team.graphql  my_teams.graphql
frontend/public/: index.html
frontend/src/: constant.tsx  error.rs  index.css  index.tsx  main.rs  utils.tsx
frontend/src/agents/: mod.rs  socket.rs  state.rs  subscription.rs
frontend/src/components/: App.tsx  Card.tsx  Drafting.tsx  Dropdown.tsx  Form.tsx  Header.tsx  HoverInfo.tsx  LeagueDropdown.tsx  LeagueInfo.tsx  Loader.tsx  Modal.tsx  Roster.tsx  TeamInfo.tsx  button.rs  header.rs  league_dropdown.rs  league_status.rs  list_errors.rs  mod.rs  team_dropdown.rs
frontend/src/components/card/: card.rs  mod.rs
frontend/src/components/dropdown/: dropdown_container.rs  dropdown_item.rs
frontend/src/graphql/: League.tsx  Players.tsx  Team.tsx  auth.tsx  league.tsx
frontend/src/routes/: CreateLeague.tsx  Error.tsx  JoinLeague.tsx  League.tsx  Login.tsx  Signup.tsx  Team.tsx  create_league.rs  create_team.rs  home.rs  join_league.rs  league.rs  login.rs  mod.rs  players.rs  rules.rs  signup.rs  team.rs
frontend/src/services/: auth.rs  graphql.rs  mod.rs
frontend/src/types/: auth.rs  leagues.rs  mod.rs  teams.rs
frontend/src/util/: constant.rs
frontend_dioxus/: Cargo.toml  tailwind.css
frontend_dioxus/src/components/: form.rs  header.rs
frontend_dioxus/src/types/: league.rs  mod.rs
frontend_test/: Cargo.toml  Trunk.toml  index.html  main.css
frontend_test/graphql/: schema.graphql
frontend_test/graphql/auth/: signup.graphql
frontend_test/graphql/leagues/: create_league.graphql  join_league.graphql
frontend_test/src/: main.rs
frontend_yew/: tailwind.config.js  tailwind.css
frontend_yew/graphql/auth/: login.graphql
frontend_yew/src/: main.rs
frontend_yew/src/api/: auth.rs  league.rs  manager.rs
frontend_yew/src/components/: header.rs  league_dropdown.rs  mod.rs
frontend_yew/src/routes/: league.rs  login.rs  mod.rs  signup.rs
gateway/: Dockerfile  gateway.js  package.json
generators/names/: Dockerfile  README.rst  model.sh  requirements.txt
generators/names/data/: baseball.txt  dwarf_female.txt  dwarf_last.txt  dwarf_male.txt  elf_female.txt  elf_last.txt  elf_male.txt  goblin_female.txt  goblin_last.txt  goblin_male.txt  halfling_female.txt  halfling_last.txt  halfling_male.txt  human_female.txt  human_last.txt  human_male.txt  orc_female.txt  orc_last.txt  orc_male.txt
generators/names/models/: rnn_layer_epoch_1.pt  rnn_layer_epoch_10.pt  rnn_layer_epoch_100.pt  rnn_layer_epoch_125.pt  rnn_layer_epoch_15.pt  rnn_layer_epoch_150.pt  rnn_layer_epoch_175.pt  rnn_layer_epoch_200.pt  rnn_layer_epoch_225.pt  rnn_layer_epoch_25.pt  rnn_layer_epoch_250.pt  rnn_layer_epoch_275.pt  rnn_layer_epoch_300.pt  rnn_layer_epoch_5.pt  rnn_layer_epoch_50.pt  rnn_layer_epoch_75.pt
generators/names/names/: data.py  generator.py  logger.py  model.py  server.py  sort.py  train.py  utils.py
generators/players/: Cargo.toml
generators/players/graphql/: create_player.graphql  leagues.graphql  set_league_status.graphql
generators/players/src/: main.rs
leagues/: Cargo.toml  Dockerfile
leagues/src/: config.rs  main.rs
leagues/src/auth/: guard.rs
leagues/src/graphql/: filter.rs  query.rs  routes.rs
leagues/src/models/: league.rs  mod.rs  user.rs
players/: Cargo.toml  Dockerfile
players/src/: config.rs  main.rs  routes.rs
players/src/graphql/: query.rs
players/src/models/: player.rs
teams/: Cargo.toml  Dockerfile
teams/src/: config.rs  main.rs
teams/src/graphql/: mod.rs  query.rs  routes.rs
tests/stats/: batting.py
users/: Cargo.toml  Dockerfile
users/src/: config.rs  main.rs  routes.rs
(+17 files in other folders)
