[package]
name = "common"
version = "0.1.0"
authors = ["John Mullins <johnmullins@gmail.com>"]
edition = "2018"

[dependencies]
jsonwebtoken = "7.2.0"
actix-web = "3.3.2"
serde = { version = "1.0.130", features = ["derive"] }
chrono = { version = "0.4.19", features = ["serde"] }
redis = { version = "0.21.2", features = ["tokio-comp"] }
uuid = {version = "0.8.2", features = ["v4"] }