[package]
name = "common"
version = "0.1.0"
authors = ["John Mullins <johnmullins@gmail.com>"]
edition = "2018"

[dependencies]
anyhow="1.0.52"
jsonwebtoken = "7.2.0"
actix-web = "3.3.2"
wither = "0.9.0"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.61"
chrono = { version = "0.4.19", features = ["serde"] }
redis = { version = "0.21.2", features = ["tokio-comp"] }
uuid = {version = "0.8.2", features = ["v4"] }
strum = "0.23"
strum_macros = "0.23"
rand = "0.8.4"

async-graphql = "2.9.15"