[package]
name = "frontend"
version = "0.1.0"
authors = ["johnmullins@gmail.comp"]
edition = "2018"

[dependencies]
wasm-bindgen = "0.2.77"
wasm-bindgen-futures = "0.4.27"
wee_alloc = "0.4.5"
console_error_panic_hook = "0.1.6"

yew = "0.18.0"
yew-router = "0.15.0"

graphql_client = { version="0.10.0", features = ["reqwest"]}
serde = { version="1.0.130", features=["derive"] }
serde_json = "1.0.67"
anyhow = "1.0.43"

toml = "0.5.8"

parking_lot = "0.10.0"
lazy_static = "1.4.0"

thiserror = "1"
log = "0.4.6"
wasm-logger = "0.2.0"

reqwest = { version = "0.11.4", features = ["json"] }