[package]
name = "frontend_dioxus"
version = "0.1.0"
authors = ["johnmullins@gmail.com"]
edition = "2018"

[dependencies]
console_error_panic_hook = "0.1.6"
dioxus = { git = "https://github.com/DioxusLabs/dioxus.git", features=["web", "router"] }
gloo = "0.5.0"
graphql_client = "0.10"
log = "0.4.6"
reqwasm = "0.3.1"
serde = { version="1.0.130", features=["derive"] }
serde_json = "1.0.71"
wasm-logger = "0.2.0"