[package]
name = "frontend_test"
version = "0.1.0"
authors = ["johnmullins@gmail.comp"]
edition = "2018"

[dependencies]
sycamore = { git = "https://github.com/sycamore-rs/sycamore", rev = "3ecf86a9bb420824172e10fd23e6116cdc346e47" }


graphql_client = { version="0.10.0", features = ["reqwest"]}
serde = { version="1.0.130", features=["derive"] }
serde_json = "1.0.67"
anyhow = "1.0.43"

toml = "0.5.8"

parking_lot = "0.11.2"
lazy_static = "1.4.0"

thiserror = "1"
log = "0.4.6"
wasm-logger = "0.2.0"

reqwest = { version = "0.11.4", features = ["json"] }
