[package]
name = "frontend"
version = "0.1.0"
authors = ["johnmullins@gmail.com"]
edition = "2018"

[dependencies]
wasm-bindgen = "0.2.77"
wasm-bindgen-futures = "0.4.27"
wee_alloc = "0.4.5"
console_error_panic_hook = "0.1.6"

bounce = { git = "https://github.com/futursolo/bounce.git" }
yew = "0.19.3"
yew-router = "0.16.0"
yew-agent = "0.1.0"
gloo = "0.5.0"

graphql_client = { version="0.10.0"}
reqwasm = "0.3.1"

serde = { version="1.0.130", features=["derive"] }
serde_json = "1.0.71"
strum = "0.23"
strum_macros = "0.23"

toml = "0.5.8"

parking_lot = "0.11.2"
lazy_static = "1.4.0"

thiserror = "1"
log = "0.4.6"
wasm-logger = "0.2.0"

[dependencies.web-sys]
version = "0.3"
features = [
	"HtmlInputElement",
	"HtmlOptionElement",
]