[package]
name = "gen_players"
version = "0.1.0"
authors = ["John Mullins <johnmullins@gmail.com>"]
edition = "2018"

[[bin]]
name = "gen_players"

[dependencies]

common = { path = "../../common" }

anyhow = "1.0.52"
graphql_client = { version = "0.10.0", features = ["reqwest-blocking"] }
reqwest = { version = "0.11.9", features = ["json", "blocking"] }
# serde = { version="1.0.130", features=["derive"] }
serde = "1.0.130"
rand = "0.8.4"
strum = "0.23"
strum_macros = "0.23"